@@ -112,7 +112,7 @@ public final class DiffMessageFormatter {
 		}
 	}
 
-	public static class Builder {
+	public static final class Builder {
 		private Builder() {}
 
 		private String runToFix;
@@ -161,7 +161,7 @@ public final class DiffMessageFormatter {
 	public static final int MAX_FILES_TO_LIST = 10;
 
 	private final StringBuilder buffer = new StringBuilder(MAX_CHECK_MESSAGE_LINES * 64);
-	private int numLines = 0;
+	private int numLines;
 
 	private final CleanProvider formatter;
 
@@ -203,7 +203,7 @@ public final class DiffMessageFormatter {
 		if (!lines.isEmpty()) {
 			addIntendedLine(NORMAL_INDENT, lines.get(0));
 		}
-		for (int i = 1; i < Math.min(MIN_LINES_PER_FILE, lines.size()); ++i) {
+		for (int i = 1; i < Math.min(MIN_LINES_PER_FILE, lines.size()); i++) {
 			addIntendedLine(DIFF_INDENT, lines.get(i));
 		}
 
@@ -251,7 +251,7 @@ public final class DiffMessageFormatter {
 	}
 
 	private static Map.Entry<Integer, String> diff(CleanProvider formatter, File file) throws IOException {
-		String raw = new String(Files.readAllBytes(file.toPath()), formatter.getEncoding());
+		String raw = Files.readString(file.toPath(), formatter.getEncoding());
 		String rawUnix = LineEnding.toUnix(raw);
 		String formatted = formatter.getFormatted(file, rawUnix);
 		String formattedUnix = LineEnding.toUnix(formatted);
