@@ -21,6 +21,7 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.lang.reflect.Constructor;
 import java.util.Collections;
+import java.util.Set;
 
 import javax.annotation.Nullable;
 
@@ -31,7 +32,7 @@ import com.diffplug.spotless.JarState;
 import com.diffplug.spotless.Provisioner;
 
 /** Wraps up <a href="https://github.com/scalameta/scalafmt">scalafmt</a> as a FormatterStep. */
-public class ScalaFmtStep implements Serializable {
+public final class ScalaFmtStep implements Serializable {
 	@Serial
 	private static final long serialVersionUID = 1L;
 
@@ -87,7 +88,7 @@ public class ScalaFmtStep implements Serializable {
 
 		State(JarState jarState, @Nullable File configFile) throws IOException {
 			this.jarState = jarState;
-			this.configSignature = FileSignature.signAsList(configFile == null ? Collections.emptySet() : Collections.singleton(configFile));
+			this.configSignature = FileSignature.signAsList(configFile == null ? Collections.emptySet() : Set.of(configFile));
 		}
 
 		FormatterFunc createFormat() throws Exception {
