@@ -15,7 +15,6 @@
  */
 package com.diffplug.gradle.spotless;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -63,11 +62,13 @@ public class JsonExtension extends FormatExtension {
 	 * offline, you can specify the path to the Biome executable via
 	 * {@code biome().pathToExe(...)}.
 	 */
+	@Override
 	public BiomeJson biome() {
 		return biome(null);
 	}
 
 	/** Downloads the given Biome version from the network. */
+	@Override
 	public BiomeJson biome(String version) {
 		var biomeConfig = new BiomeJson(version);
 		addStep(biomeConfig.createStep());
@@ -163,7 +164,7 @@ public class JsonExtension extends FormatExtension {
 		 * Refers to com.fasterxml.jackson.core.JsonGenerator.Feature
 		 */
 		public JacksonJsonGradleConfig jsonFeature(String feature, boolean toggle) {
-			this.jacksonConfig.appendJsonFeatureToToggle(Collections.singletonMap(feature, toggle));
+			this.jacksonConfig.appendJsonFeatureToToggle(Map.of(feature, toggle));
 			formatExtension.replaceStep(createStep());
 			return this;
 		}
